--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Ilham Mneimneh
 email: ilham@mmneimneh.net
 description: Final-year bioinformatics student at LAU.
+permalink: pretty
 remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
