--- a/_data/projects_menu.yml
+++ b/_data/projects_menu.yml
@@ -4,5 +4,5 @@
     - name: Report
 - label: Class Projects
   items:
-    - name: Machine Learning: Forest Fire Prediction
+    - name: Machine Learning, Forest Fire Prediction
 - label: Lab Projects
